src/mobile-styling/main.css
.main-mobile {
  position: absolute;
  top: 85px;
  right: 0;
  left: 0;
}

.top-headers {
  width: 100%;
  text-align: center;
  margin: 40px 0;
  color: #3b1717;
}

.self-info {
  position: relative;
  width: 90%;
  margin: 30px 0 0 5%;
  padding-top: 75px;
}

.img-container {
  border-radius: 50%;
  position: absolute;
  top: 0;
  left: 5%;
  z-index: 10;
  width: 100px;
  height: 100px;
  background-color: white;
  border: 5px solid white;
  box-shadow: 0 -9px 20px 7px rgb(0 0 0 / 30%);
}

.img-container > img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
}

.info-container {
  position: relative;
  background-color: #7c4545;
  box-shadow: 0 3px 20px 0 rgb(0 0 0);
  border-radius: 15px;
  width: 96%;
  padding: 50px 0 20px 0;
  margin: 0 0 0 2%;
}

.info-intro {
  text-align: center;
  margin: 0 5%;
  font-size: 1.2rem;
  color: white;
}

.social-media-header {
  padding: 0;
  width: 80%;
  margin: 20px 10% 0 10%;
  justify-content: space-around;
  align-items: center;
}

.social-media-header > li > a {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 33px;
  width: 33px;
  border-radius: 50%;
}

.social-media-header > li > a > img {
  height: 18px;
}

.seperator {
  height: 8px;
  text-align: center;
  margin: 70px auto;
  width: 50%;
  border-radius: 20px;
  background-color: #7c4545;
}

